<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="407dp"
        android:layout_height="29dp"
        android:layout_marginEnd="4dp"
        android:text="@string/titulo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/invertir"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/invertir"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <Button
        android:id="@+id/borrar"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="112dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <Button
        android:id="@+id/cuadrado"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="204dp"
        android:text="@string/cuadrado"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <Button
        android:id="@+id/siete"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="7dp"
        android:text="@string/siete"
        app:layout_constraintEnd_toStartOf="@+id/ocho"
        app:layout_constraintTop_toBottomOf="@+id/cuadrado" />

    <Button
        android:id="@+id/ocho"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="9dp"
        android:text="@string/ocho"
        app:layout_constraintEnd_toStartOf="@+id/nueve"
        app:layout_constraintTop_toBottomOf="@+id/borrar" />

    <Button
        android:id="@+id/nueve"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nueve"
        app:layout_constraintEnd_toStartOf="@+id/multiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/invertir" />

    <Button
        android:id="@+id/multiplicacion"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/cuatro"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:text="@string/cuatro"
        app:layout_constraintEnd_toStartOf="@+id/cinco"
        app:layout_constraintTop_toBottomOf="@+id/siete" />

    <Button
        android:id="@+id/cinco"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="9dp"
        android:text="@string/cinco"
        app:layout_constraintEnd_toStartOf="@+id/seis"
        app:layout_constraintTop_toBottomOf="@+id/ocho" />

    <Button
        android:id="@+id/seis"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/seis"
        app:layout_constraintEnd_toStartOf="@+id/resta"
        app:layout_constraintTop_toBottomOf="@+id/nueve" />

    <Button
        android:id="@+id/resta"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplicacion" />

    <Button
        android:id="@+id/uno"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="6dp"
        android:text="@string/uno"
        app:layout_constraintEnd_toStartOf="@+id/dos"
        app:layout_constraintTop_toBottomOf="@+id/cuatro" />

    <Button
        android:id="@+id/dos"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="9dp"
        android:text="@string/dos"
        app:layout_constraintEnd_toStartOf="@+id/tres"
        app:layout_constraintTop_toBottomOf="@+id/cinco" />

    <Button
        android:id="@+id/tres"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tres"
        app:layout_constraintEnd_toStartOf="@+id/suma"
        app:layout_constraintTop_toBottomOf="@+id/seis" />

    <Button
        android:id="@+id/coma"
        android:layout_width="92dp"
        android:layout_height="90dp"
        android:layout_marginEnd="6dp"
        android:text="@string/coma"
        app:layout_constraintEnd_toStartOf="@+id/igual"
        app:layout_constraintTop_toBottomOf="@+id/tres" />

    <Button
        android:id="@+id/igual"
        android:layout_width="96dp"
        android:layout_height="89dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:text="@string/igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

    <Button
        android:id="@+id/suma"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginEnd="16dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resta" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="308dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="103dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="631dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="206dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="317dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="208dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="424dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="530dp" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="364dp"
        android:layout_height="77dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <Button
        android:id="@+id/cero"
        android:layout_width="180dp"
        android:layout_height="91dp"
        android:layout_marginEnd="6dp"
        android:text="@string/cero"
        app:layout_constraintEnd_toStartOf="@+id/coma"
        app:layout_constraintTop_toBottomOf="@+id/uno" />

    <Button
        android:id="@+id/division"
        android:layout_width="87dp"
        android:layout_height="107dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />
</androidx.constraintlayout.widget.ConstraintLayout>