<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@drawable/contacto"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/correo"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/asunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/asunto"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/valoracion"
            android:layout_width="224dp"
            android:layout_height="28dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:max="10" />

        <TextView
            android:id="@+id/valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/contenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/contenido"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/enviar" />

</GridLayout>